<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListFragment">

    <data>
        <variable
            name="updateViewModel"
            type="buu.informatics.s59160102.piggybankv2.updateBank.UpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <!--        android:onClick="@{()->historyViewModel.onbankClicked()}"-->


        <Button
            android:id="@+id/Update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"

            android:background="@android:color/holo_blue_dark"
            android:text="@string/Update_btn"
            app:layout_constraintBottom_toTopOf="@+id/Back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Back_btn"
            app:layout_constraintHorizontal_bias="0.839"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.844" />

        <!--            android:onClick="@{()->updateViewModel.onDelete()+updateViewModel.onClose()}"-->
        <Button
            android:id="@+id/Delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"

            android:text="@string/Delete_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/Update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toEndOf="@+id/Update_btn" />

        <Button
            android:id="@+id/Back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@android:color/holo_green_dark"

            android:onClick="@{()->updateViewModel.onClose()}"
            android:text="@string/Back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditSum_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:ems="10"
            android:hint="@string/Sum"
            android:inputType="phone"
            android:paddingLeft="90dp"
            android:text="@{String.valueOf(updateViewModel.bank.sum)}"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/Update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTitle_text" />

        <TextView
            android:id="@+id/EditTitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EditTitle_text"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/EditSum_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>