<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="addBankViewModel"
            type="buu.informatics.s59160102.piggybankv2.addBank.AddBankViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".AddFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/Money_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/Coin10_image"

                android:layout_width="86dp"
                android:layout_height="88dp"
                android:layout_marginLeft="30px"
                android:layout_marginTop="50px"
                android:layout_marginRight="20px"
                android:src="@drawable/cointen" />

            <ImageView
                android:id="@+id/Coin5_image"

                android:layout_width="89dp"
                android:layout_height="73dp"
                android:layout_marginTop="68px"
                android:layout_marginRight="20px"
                android:src="@drawable/coinfive" />

            <ImageView
                android:id="@+id/Coin2_image"

                android:layout_width="58dp"
                android:layout_height="60dp"
                android:layout_marginTop="90px"
                android:layout_marginRight="20px"
                android:src="@drawable/cointwo" />

            <ImageView
                android:id="@+id/Coin1_image"

                android:layout_width="49dp"
                android:layout_height="48dp"
                android:layout_marginTop="106px"
                android:layout_marginRight="50px"
                android:src="@drawable/coinone" />

        </LinearLayout>

        <Button
            android:id="@+id/Confirm_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/Confirm_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Cancel_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:text="@string/Cancel_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/Confirm_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Confirm_btn" />

        <!--        android:text='@{addHistory.sumTextVisible?null:addHistory.sum}'-->
        <TextView
            android:id="@+id/Money_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{String.valueOf(addBankViewModel.sum)}"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/AddTitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddTitle_text"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>